<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="360dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/header_image"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.7" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="start"
                    android:layout_margin="16dp"
                    android:background="@drawable/circle_background"
                    android:padding="4dp"
                    android:src="@drawable/back_icon"
                    app:layout_collapseMode="parallax"
                    app:tint="@color/white" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="16dp"
                    android:background="@drawable/rounded_background_black"
                    android:gravity="center_vertical"
                    app:layout_collapseMode="parallax">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:padding="5dp"
                        android:src="@drawable/search"
                        app:tint="@color/white" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="24dp"
                        android:background="@color/white"
                        android:padding="5dp" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginRight="5dp"
                        android:padding="5dp"
                        android:src="@drawable/more"
                        app:layout_collapseMode="parallax"
                        app:tint="@color/white" />

                </LinearLayout>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_collapseMode="pin" />

                <!--                <include-->
                <!--                    layout="@layout/toolbar"-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    app:layout_collapseMode="pin"-->
                <!--                    app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light" />-->

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_marginBottom="50dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tvSellPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="BDT. 2,6545"
                    android:textColor="@color/black_1D1D1E"
                    android:textSize="20sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvRegularPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="BDT. 3,654"
                    android:textColor="@color/gray_999999"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/tvSellPrice"
                    app:layout_constraintLeft_toRightOf="@+id/tvSellPrice"
                    app:layout_constraintTop_toTopOf="@+id/tvSellPrice" />

                <TextView
                    android:id="@+id/tvDiscountPercentage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/rounded_background"
                    android:paddingLeft="7dp"
                    android:paddingTop="1dp"
                    android:paddingRight="7dp"
                    android:paddingBottom="1dp"
                    android:text="25%"
                    android:textColor="@color/green"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/tvRegularPrice"
                    app:layout_constraintLeft_toRightOf="@+id/tvRegularPrice"
                    app:layout_constraintTop_toTopOf="@+id/tvRegularPrice" />

                <ImageView
                    android:id="@+id/imgLove"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/love"
                    app:layout_constraintBottom_toBottomOf="@+id/tvDiscountPercentage"
                    app:layout_constraintRight_toLeftOf="@+id/imgShare"
                    app:layout_constraintTop_toTopOf="@+id/tvDiscountPercentage" />


                <ImageView
                    android:id="@+id/imgShare"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/share"
                    app:layout_constraintBottom_toBottomOf="@+id/imgLove"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/imgLove" />

                <TextView
                    android:id="@+id/tvProductDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="TUINANLE Sandals Women 2020 New Sexy Open-toed Sandals Wedge Outdoor Cool Platform Shoes Ladies Beach Summer Sandalia Feminina"
                    android:textColor="@color/black_515151"
                    app:layout_constraintTop_toBottomOf="@+id/tvSellPrice" />

                <TextView
                    android:id="@+id/tvRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="4.8"
                    android:textColor="@color/green"
                    android:textSize="12sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvProductDescription" />

                <ImageView
                    android:id="@+id/imgRating"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_marginLeft="8dp"
                    android:src="@android:drawable/star_off"
                    app:layout_constraintBottom_toBottomOf="@+id/tvRating"
                    app:layout_constraintLeft_toRightOf="@+id/tvRating"
                    app:layout_constraintTop_toTopOf="@+id/tvRating"
                    app:tint="@color/green" />

                <TextView
                    android:id="@+id/tvRatingsCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:text="82 Ratings"
                    android:textColor="@color/gray_999999"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/imgRating"
                    app:layout_constraintLeft_toRightOf="@+id/imgRating"
                    app:layout_constraintTop_toTopOf="@+id/imgRating" />

                <TextView
                    android:id="@+id/tvReviewsCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:text="51 Reviews"
                    android:textColor="@color/gray_999999"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/tvRatingsCount"
                    app:layout_constraintLeft_toRightOf="@+id/tvRatingsCount"
                    app:layout_constraintTop_toTopOf="@+id/tvRatingsCount" />

                <TextView
                    android:id="@+id/tvOrdersCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:text="100 Orders"
                    android:textColor="@color/gray_999999"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/tvReviewsCount"
                    app:layout_constraintLeft_toRightOf="@+id/tvReviewsCount"
                    app:layout_constraintTop_toTopOf="@+id/tvReviewsCount" />

                <TextView
                    android:id="@+id/tvProductImageTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:text="2 Colors, 4 Size"
                    android:textColor="@color/black_1D1D1E"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvRating" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewProduct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintRight_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvProductImageTitle" />

                <RelativeLayout
                    android:id="@+id/reDelivery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerViewProduct">

                    <include
                        layout="@layout/layout_delivery"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/recyclerViewProduct"

                        />
                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/relOptions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/reDelivery">

                    <include
                        layout="@layout/layout_options"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"

                        />
                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewProductWithModel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    app:layout_constraintRight_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/relOptions" />

                <TextView
                    android:id="@+id/tvSeeFullDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/view_full_description"
                    android:textColor="@color/black_4D4D4D"
                    android:textSize="16sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerViewProductWithModel"
                    android:gravity="center"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/linBottomSection"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"

            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:background="#E9FFF5">

                <ImageView
                    android:id="@+id/imgAddToCart"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/add_to_cart" />

                <TextView
                    android:id="@+id/tvCounter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/counter_circle_background"
                    android:gravity="center"
                    android:padding="2dp"
                    android:text="2+"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2">

                <TextView
                    android:id="@+id/tvAddToCart"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/green_008E47"
                    android:gravity="center"
                    android:text="@string/add_to_cart"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tvBuyNow"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/green"
                    android:gravity="center"
                    android:text="@string/buy_now"
                    android:textColor="@color/white" />
            </LinearLayout>


        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
